<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_launch</name>
  <version>1.0.0</version>
  <description>F1TENTH launch package.</description>
  <maintainer email="amadeusz.szymko@put.poznan.pl">Amadeusz Szymko</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ad_api_adaptors</exec_depend>
  <exec_depend>autoware_iv_external_api_adaptor</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>cartographer_utils</exec_depend>
  <exec_depend>control_validator</exec_depend>
  <exec_depend>default_ad_api</exec_depend>
  <exec_depend>ekf_localizer</exec_depend>
  <exec_depend>external_cmd_selector</exec_depend>
  <exec_depend>global_parameter_loader</exec_depend>
  <exec_depend>glog_component</exec_depend>
  <exec_depend>gyro_odometer</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>localization_error_monitor</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>operation_mode_transition_manager</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>shift_decider</exec_depend>
  <exec_depend>stop_filter</exec_depend>
  <exec_depend>tier4_system_launch</exec_depend>
  <exec_depend>trajectory_follower_node</exec_depend>
  <exec_depend>trajectory_loader</exec_depend>
  <exec_depend>twist2accel</exec_depend>
  <exec_depend>vehicle_cmd_gate</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
